# constraints-emerge

./: .travis.yml  ChangeLog.md  README.md  constraints-emerge.cabal  ghc-justdoit.cabal  stack.yaml
Data/Constraint/: Emerge.hs
Data/Constraint/Emerge/: Plugin.hs
GHC/: Emerge.hs  JustDoIt.hs  LJT.hs
GHC/Emerge/: Plugin.hs
GHC/JustDoIt/: Plugin.hs
examples/: Demo.hs
test/: EmergeSpec.hs  MySpec.hs
