name:                ghc-justdoit
version:             0.1
synopsis:            A magic typeclass that just does it
description:
    This plugin allows you to write
    .
    @
    &#123;&#45;\# OPTIONS_GHC -fplugin GHC.JustDoIt.Plugin \#&#45;&#125;
    module Test where
    .
    import GHC.JustDoIt
    .
    foo :: ((a -> r) -> r) -> (a -> ((b -> r) -> r)) -> ((b -> r) -> r)
    foo = (…)
    @
    .
    without having to write the actual implementation of `foo`.
    .
    See <https://github.com/isovector/ghc-justdoit/blob/master/examples/Demo.hs examples/Demo.hs>
    for a few examples of what this plugin can do for you.

homepage:            https://github.com/isovector/ghc-justdoit
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2018 Joachim Breitner
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
tested-with:         GHC ==8.5.*

library
  exposed-modules:     GHC.JustDoIt
  exposed-modules:     GHC.JustDoIt.Plugin
  build-depends:       base >=4.11 && <4.12
  build-depends:       hashable
  build-depends:       ghc >=8.5
  build-depends:       constraints
  build-depends:       hspec
  default-language:    Haskell2010

Test-Suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  other-modules:    MySpec
  hs-Source-Dirs:   test
  main-is:          Main.hs
  build-depends:    base >=4.9 && <4.10, constraints, hspec, ghc-justdoit

source-repository head
  type:     git
  location: git://github.com/isovector/ghc-justdoit.git
